--- a/campusmap.html
+++ b/campusmap.html
@@ -19,7 +19,7 @@
 				<h1>Campus Map</h1>
 				<a href="first" class="image fit"><img src="images/maincampusmap.jpg" alt="" /></a>
 				<footer>
-					<a href="list2.html" class="button style2 scrolly-middle">ATM</a>&nbsp;&nbsp;<a href="list1.html" class="button style2 scrolly-middle">list1</a>&nbsp;&nbsp;<a href="list2.html" class="button style2 scrolly-middle">CANTEEN</a>&nbsp;&nbsp;<a href="list2.html" class="button style2 scrolly-middle">LIBRARY</a>
+					<a href="#banner" class="button style2 scrolly-middle">ATM</a>&nbsp;&nbsp;<a href="#banner" class="button style2 scrolly-middle">CAMPUS STORE</a>&nbsp;&nbsp;<a href="#banner" class="button style2 scrolly-middle">CANTEEN</a>&nbsp;&nbsp;<a href="#banner" class="button style2 scrolly-middle">LIBRARY</a>
 				</footer>
 			</section>
 
