--- a/campusmap.html
+++ b/campusmap.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Overflow by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>MAP</title>
@@ -13,16 +9,15 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+		<a href="first" class="image fit"><img src="images/maincampusmap.jpg" alt="" /></a>
 		<!-- Header -->
-			<section id="header"  >
-				<h1>Campus Map</h1>
-				<a href="first" class="image fit"><img src="images/maincampusmap.jpg" alt="" /></a>
-				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">ATM</a>&nbsp;&nbsp;<a href="#banner" class="button style2 scrolly-middle">CAMPUS STORE</a>&nbsp;&nbsp;<a href="#banner" class="button style2 scrolly-middle">CANTEEN</a>&nbsp;&nbsp;<a href="#banner" class="button style2 scrolly-middle">LIBRARY</a>
-				</footer>
-			</section>
-
+		
+			<article id="fourth" class="container box style2">
+		<a href="#list2" class="button style2 scrolly">ATM</a>
+		<a href="#banner" class="button style2 scrolly-middle">CAMPUS STORE</a>
+		<a href="#banner" class="button style2 scrolly-middle">CANTEEN</a>
+		<a href="list2.html" class="button style2 scrolly">LIBRARY</a>
+							</article>
 
 
 		<!-- Scripts -->
