--- a/list1.html
+++ b/list1.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Overflow by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Overflow by HTML5 UP</title>
+		<title>demo map</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,7 +35,7 @@
 					<br/>
 					<p> you can also view the route on other device by scanning the QR code</p>
 
-					<div class="col-3 col-12-mobile"><img src="images/thumbs/qr1.png" alt="" title="Ad infinitum" /></div>
+					<div class="col-3 col-12-mobile"><img src="images/thumbs/qrseto.png" alt="" title="Ad infinitum" /></div>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Start</a>
 				</footer>
@@ -151,8 +147,8 @@
 			<article class="container box style2">
 				<header>
 					<h2>View the route on another</h2>
-					<p>https://qrgo.page.link/kF5iv.</p>
-					<div class="col-3 col-12-mobile"><img src="images/thumbs/qr1.png" alt="" title="Ad infinitum" /></div>
+					<p>https://qrgo.page.link/ngfYv</p>
+					<div class="col-3 col-12-mobile"><img src="images/thumbs/qrseto.png" alt="" title="Ad infinitum" /></div>
 				</header>
 				
 			</article>
