--- a/list.html
+++ b/list.html
@@ -25,7 +25,7 @@
 
 				<div class="container-login100-form-btn">
 					<button class="login100-form-btn">
-						<a href="maps/list3.html">
+						<a href="list3.html">
 						B2184</a>
 					</button>
 				</div>
