--- a/list1.html
+++ b/list1.html
@@ -148,7 +148,7 @@
 				<header>
 					<h2>View the route on another</h2>
 					<p>https://qrgo.page.link/ngfYv</p>
-					<div class="col-3 col-12-mobile"><img src="images/thumbs/qrseto.png" alt="" title="Ad infinitum" /></div>
+					<div class="col-3 col-12-mobile"><img src="images/thumbs/qrsetto.png" alt="" title="Ad infinitum" /></div>
 				</header>
 				
 			</article>
