--- a/list1.html
+++ b/list1.html
@@ -35,7 +35,7 @@
 					<br/>
 					<p> you can also view the route on other device by scanning the QR code</p>
 
-					<div class="col-3 col-12-mobile"><img src="images/thumbs/qrseto.png" alt="" title="Ad infinitum" /></div>
+					<div class="col-3 col-12-mobile"><img src="images/thumbs/qrsetto.png" alt="" title="Ad infinitum" /></div>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Start</a>
 				</footer>
